src/assets/css/application.css
@font-face {
  font-family: "sofia-pro-semibold"; 
  src: url('/fonts/SofiaProSemiBold.otf');
} 

@font-face {
  font-family: "sofia-pro-medium"; 
  src: url('/fonts/SofiaProMedium.otf');
} 

body {
    padding-top: 90px;
    font-family: "sofia-pro-medium";
 
  }

  main {
    margin-bottom: 60px;
  }

  .title-text {
    margin-top:20px;
  }

  .form-group{
    margin-top: 20px;
    max-width: 420px;
  }

#homeJumbotron {
  background-image:url("/images/home/writingpic1.jpeg");
  background-size:100%;
  margin-top: 0px !important;
  border-radius: 0px !important;
}


.fixed-top {
  background-color: #4990e2;
}

.header-logo {
  width: 70px;
}

.btn-primary, .btn-primary:hover, .btn-primary:active, .btn-primary:visited {
    background-color: #4990e2 !important;
    border-color: #4990e2 !important;
    border-radius: 0px !important;
}

.nav-icon{
  color: white !important;
}

.nav-link{
  color: white !important;
}

#signup {
  border: 1px solid white;
}

#or {
  padding-left:0px;
  padding-right:10px;
}


.nav-item{
 
}

.fas {
  color: #4990e2;
}

.col-lg-4 {
  padding: 20px;
}

.home-title {
  font-size: 30px;
  margin-bottom: 30px;
  line-height: 1.4;
  max-width: 500px;
  text-shadow: 0px 0px 15px rgba(255, 255, 255, 1);
}

a {
  color:#4990e2;
}
.card-text{
  font-size: 20px;
}



#home-browse-btn{
  margin: 0 auto;
  margin-top: 20px;
}

/* Competition list page */

#comp-list{
  margin-top:30px;
}

.comp-list-item{
  padding: 20px;
}

.comp-title{
  display: block;
  color: inherit;
}

.comp-desc{
  display: block;
  max-width: 500px;
  font-size:18px;
}

.comp-details{
  display: block;
  font-style: italic;
}
.view-details{
  margin-top: 20px;
}

/*                       */

/* Competition details page */

.back-link{
  display: block;
  margin-bottom: 10px;
}

#comp-entry {
  margin-top: 40px;
}

.comp-details-desc {
  font-size: 18px;
}

#entry-list{
  margin-top: 40px;
  max-width:500px;
}

.entry-title{
  display:block;
  font-size: 20px;
}

.entry-author{
  display:block;
  font-style: italic;

}
.entry-body{
  display:block;
  margin-top: 10px;
}

/*                   */





@media screen and (min-width: 992px) {

  #homeJumbotron {
    background-image:url("/images/home/writingpic1.jpeg");
    background-size:100%;
    height: 450px;
    background-position: center;
  }

  #comp-link{
    margin-right: 20px;

  }


}

@media screen and (max-width: 991px) {
  #signup {
    border: none;
  }

  #or {
    display:none;
  }
}

@media screen and (max-width: 768px) {

  #homeJumbotron {
      background-size: 700px;
      background-position: center;
  }

  .home-title{
    max-width: 300px;
    font-size: 26px;
  }



}

